@@ -16,6 +16,7 @@
 #endif /* HAVE_LIBSWF */
 #include "output-emf.h"
 #include "output-dxf.h"
+#include "output-epd.h"
 
 struct output_format_entry {
     const char * name;
@@ -37,6 +38,7 @@ static struct output_format_entry output_formats[] = {
     {"emf",     "Enhanced Metafile format",     output_emf_writer},
     {"er",      "Elastic Reality Shape file",   output_er_writer},
     {"dxf",     "DXF format",   output_dxf_writer},
+    {"epd",     "EPD format",   output_epd_writer},
     {NULL,	NULL}
 };
 
